# life_game

./: .gitignore  Cargo.toml  pyproject.toml
benches/: bench_sim.rs
pp_simulation/: __init__.py
src/: cell.rs  lib.rs  main.rs  simulation.rs
src/individual/: mod.rs  predator.rs  prey.rs
tests/: test_simulation.rs
